<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              tools:context=".activities.AccountActivity">
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
		<TextView
			android:id="@+id/user_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:labelFor="@+id/user_edit_text"
			android:text="@string/username"
			android:textColor="@android:color/black"
			android:textSize="24sp" />
		
		<EditText
			android:id="@+id/user_edit_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:autofillHints="@string/username"
			android:inputType="textPersonName"
			android:textAlignment="center"
			android:textColor="@android:color/secondary_text_light"
			android:textSize="24sp" />
	
	</LinearLayout>
	
	<TextView
		android:id="@+id/highscore_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/highscore"
		android:textColor="@android:color/black"
		android:textSize="24sp" />
	
	<TextView
		android:id="@+id/points_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/points"
		android:textColor="@android:color/black"
		android:textSize="24sp" />
	
	<LinearLayout
		style="?android:attr/buttonBarButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">
		
		<Button
			android:id="@+id/update_btn"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/update_account"
			android:textAllCaps="false"
			android:textColor="@android:color/holo_blue_dark"
			android:textSize="24sp" />
		
		<Button
			android:id="@+id/delete_btn"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/delete_account"
			android:textAllCaps="false"
			android:textColor="@android:color/holo_red_dark"
			android:textSize="24sp" />
	
	</LinearLayout>

</LinearLayout>